- issue2550880: Ability to choose password store scheme and SSHA
  support. Discussion on devel list is tending in favor of this patch.
  Embedded test works, my manual test with a SSHA password
  assigned to a user allowed the user to log in.   Ran the test suite
  and the tests that were not skipped passed. (applied by John Rouillard)

Fixed:

- issue1615201: Optionally restore the original (version 0.6) mailgw 
  behaviour of ignoring a Resent-From:-header and using the real 
  From-header instead: new configuration option EMAIL_KEEP_REAL_FROM 
  (Peter Funk aka Pefu).
- issue2550717: Changed a couple of residual email references into
  E-Mail in German translation (John Rouillard)
- issue2550669: Adding documentation for csv_field_size to the
  customizing tracker section of doc/customizing.txt (John Rouillard)
- issue2550601: gsoc-2009 "bug" class doesn't have "patches" property
  Added multilink to patches to the bug schema in the devel template.
  (applied by John Rouillard)
- issue2550748: Crash when creating new issues with non-existing
  multilink values (in classic template). Applied patch so it
  now errors the same way as an update does. (applied by John Rouillard)
- issue2550757: one bug raised by issue fixed. Patch created by
  W. Trevor King (wking) for documentation of mailgw applied by 
  John Rouillard.
- Fix processing of additional arguments to cgi method 'menu': This
  would not work if more than one additional argument is used.
  (Ralf Schlatterbeck)

2016-01-11: 1.5.1

Pay attention:

  If you have installed an intermediate version from our version control
  system and have modified your tracker instance to escape OK and
  error-messages in the HTML templates you need to revert this change.
  If you're upgrading from a previous roundup release version
  you should look into ``doc/upgrading.txt``.  (Ralf Schlatterbeck)

  Also note the default user permissions, see ``doc/upgrading.txt``.

Features:
